--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,14 +54,16 @@ p {
 .map {
     text-align: center;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     // max-width: none;
     -webkit-overflow-scrolling: touch;
     // overflow: scroll;
-    border-radius: 0;
 
     .float-box {
+        display: -webkit-inline-flex;
         display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
 
         >* {
             display: inline;
@@ -71,23 +73,25 @@ p {
 
     img {
         border-radius: 200px;
-        width: 60px;
-        height: 60px;
+        width: 80px;
+        height: 80px;
+        margin-right: 45px;
     }
 
     h1,
     p {
-        margin: 0;
+        margin: 0 0 0 0;
         padding: 0;
     }
 
     ons-button {
         background-color: #F3C53B;
         border-radius: 25px;
-        width: 100%;
+        width: 90%;
         font-size: 14px;
         font-weight: bold;
         padding: 0;
+        margin: 15px 0 0 0;
     }
 }
 
