--- a/scss/style.scss
+++ b/scss/style.scss
@@ -209,6 +209,11 @@ ons- {
             margin: 3vh 8% 0 8%;
             text-align: center;
         }
+
+        ons-select{
+            width: 84%;
+            margin: 1vh 8% 0 8%;
+        }
     }
 }
 
