--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,7 @@ p {
     // overflow: scroll;
 
     .float-box {
+        margin: 5px 0 0 0;
         display: -webkit-inline-flex;
         display: inline-flex;
         justify-content: space-between;
